--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,13 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: MM
-email:
+title: Tripperist
+email: tripperista@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-twitter_username: username
-github_username: username
+  Tripperist enhances your travel experience. Find interesting sites
+  nearby. Get curated trips from fellow Tripperistas.
+twitter_username: tripperist
+github_username: tripperist
 minimal_mistakes_skin: default
 search: true
 
@@ -58,9 +57,9 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "First Lastname"
+  name   : "Tripp Erista"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  bio    : "The one and only."
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
